extensions/chat-bot/assets/style.css
:root {
    --primary-heading-color: white;
    --Primary-chatbot-text-color: #080808;
    --Primary-chatbot-text-color-onHover: rgba(8, 8, 8, .7);
    --primary-font: "Roboto", sans-serif;
    --custom-font-size: 1em;
    --chatbubble-button-backgound-color: #183d57;
    --chat-window-header-color: #2c3c4c;
    --chatbubble-window-backround: white;
    --inverse-button-color: white;
    --chatbubble-message-background-color: #f2f2f2b6;
    --chatbubble-ai-message-background-color: #579dff81;
    --chatbubble-admin-message-background-color: #57d5ff81;
    --general-initial-prompt-box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
    --general-initial-prompt-box-shadow-onHover: rgba(0, 0, 0, 0.3) 0px 4px 12px;
}

.chatbubble-ai-message pre {
    text-wrap: wrap !important;
    white-space: break-spaces !important;
    font-family: inherit !important;
    margin: 0 !important;
    line-height: 1.5em !important;
}

.custom-loader {
    width: 4px;
    height: 4px;
    border-radius: 50%;
    color: #040404d6;
    box-shadow:
        19px -19px 0 0px, 38px -19px 0 0px, 57px -19px 0 0px,
        19px 0 0 5px, 38px 0 0 5px, 57px 0 0 5px,
        19px 19px 0 0px, 38px 19px 0 0px, 57px 19px 0 0px;
    transform: translateX(-38px);
    animation: d6 4s infinite linear;
    align-self: center;
    position: absolute;
    scale: 0;
    display: flex;
    opacity: 1;
    transition: .3s ease-in-out;
    right: 25px;
    bottom: 25px;
}

@keyframes d6 {
    12.5% {
        box-shadow:
            19px -19px 0 0px, 38px -19px 0 0px, 57px -19px 0 5px,
            19px 0 0 5px, 38px 0 0 0px, 57px 0 0 5px,
            19px 19px 0 0px, 38px 19px 0 0px, 57px 19px 0 0px
    }

    25% {
        box-shadow:
            19px -19px 0 5px, 38px -19px 0 0px, 57px -19px 0 5px,
            19px 0 0 0px, 38px 0 0 0px, 57px 0 0 0px,
            19px 19px 0 0px, 38px 19px 0 5px, 57px 19px 0 0px
    }

    50% {
        box-shadow:
            19px -19px 0 5px, 38px -19px 0 5px, 57px -19px 0 0px,
            19px 0 0 0px, 38px 0 0 0px, 57px 0 0 0px,
            19px 19px 0 0px, 38px 19px 0 0px, 57px 19px 0 5px
    }

    62.5% {
        box-shadow:
            19px -19px 0 0px, 38px -19px 0 0px, 57px -19px 0 0px,
            19px 0 0 5px, 38px 0 0 0px, 57px 0 0 0px,
            19px 19px 0 0px, 38px 19px 0 5px, 57px 19px 0 5px
    }

    75% {
        box-shadow:
            19px -19px 0 0px, 38px -19px 0 5px, 57px -19px 0 0px,
            19px 0 0 0px, 38px 0 0 0px, 57px 0 0 5px,
            19px 19px 0 0px, 38px 19px 0 0px, 57px 19px 0 5px
    }

    87.5% {
        box-shadow:
            19px -19px 0 0px, 38px -19px 0 5px, 57px -19px 0 0px,
            19px 0 0 0px, 38px 0 0 5px, 57px 0 0 0px,
            19px 19px 0 5px, 38px 19px 0 0px, 57px 19px 0 0px
    }
}




/* 
        ecample of how e
        h1 {
            font-size: calc(var(--font-size) * 2);
        }
     */

#chatbubble {
    position: fixed;
    bottom: 30px;
    right: 30px;
    z-index: 899;
    scroll-behavior: smooth;
}





#chatbubble-button {

    padding: 0.25em;
    cursor: pointer;
    border-style: outset solid;
    font-weight: bold;
    box-shadow: 1 1 4px rgba(0, 0, 0, 0.6);
    opacity: 1;
    transform: translateY(0);
    transform-origin: center;
    transition: 0.3s ease-in-out;
    width: 60px;
    height: 60px;
    font-size: 2em;
}

#chatbubble-button:hover {
    transform: scale(0.95);
}

#chatbubble-button.deactive {
    opacity: 0;
    transform: translateY(5em) scale(.1);
}

#chatbubble-window {
    display: none;
    position: fixed;
    bottom: 20px;
    right: 20px;
    background-color: var(--chatbubble-window-backround);
    opacity: 0;
    transition: opacity 0.2s ease-in-out;
    animation: fade-in 1s ease-in-out;
    -webkit-animation: fade-in 1s ease-in-out;
    -moz-animation: fade-in 1s ease-in-out;
    -o-animation: fade-in 1s ease-in-out;
    overflow: hidden;
    scroll-behavior: smooth;
    max-height: 80vh;
    box-shadow: 0 0 12px -3px rgba(0, 0, 0, 0.3);
    transform: scale(1) translateY(0);
    transform-origin: right bottom;
    width: calc((1/5)*(100vw));
    min-width: 400px;
    height: calc((3/4)*(100vh));
    min-height: 300px;
}



@media screen and (max-width:468px) {
    #chatbubble-window {
        width: 90vw;
        min-width: 80vw;
        height: 100vh;
        /* deduct 50px for the keyboard, can be adjusted */

    }
}

@media screen and (max-width: 600px) {

    #chatbubble-input input,
    #chatbubble-input textarea {
        font-size: 16px;
    }
}

#chatbubble-window.active {
    display: flex;
    flex-direction: column;
    opacity: 1;
    overflow: hidden;
}

#chatbubble-window.active.deactive {
    animation: fade-out .4s ease-in-out;
    opacity: 0;
}



@-webkit-keyframes fade-out {
    from {

        bottom: 20px;
    }

    to {

        bottom: 80px;
    }
}

@keyframes fade-out {
    from {

        bottom: 20px;
    }

    to {

        bottom: 80px;
    }
}

@-webkit-keyframes fade-in {
    from {
        opacity: 0;
        bottom: 80px;
    }

    to {
        opacity: 1;
        bottom: 20px;
    }
}

@keyframes fade-in {
    from {
        opacity: 0;
        bottom: 80px;
    }

    to {
        opacity: 1;
        bottom: 20px;
    }
}


#chatbubble-header {
    position: absolute;
    top: 0;
    padding: 10px;
    display: flex;
    justify-content: flex-start;
    width: 100%;
    z-index: 1;
    align-items: center;
    gap: 0.7em;
    border-bottom-right-radius: 695% 1250%;
    height: 6em;
    box-shadow: 0.5px 2px 5px rgba(0, 0, 0, 0.5);
}


.close-button {
    background: transparent;
    border: none;
    transition: 0.3s ease;
    position: absolute;
    right: -11px;
    top: -6px;
    width: 15%;
    height: 48%;
}


.close-button:hover {

    scale: .9;
}

.chat-up-logo {
    display: flex;
    width: 50px;
    align-items: center;
    margin-left: 0.6em;
    flex-direction: row;
    align-self: center;
    position: relative;
    top: 0px;

}
/* ... */

